fix(configurator): map config schema changes