@@ -112,8 +112,8 @@ public class VanillaFallFeature implements FallFeature, RegistrableFeature {
         Block block = entity.getInstance().getBlock(landingPos);
 
         if (entity.hasTag(EXTRA_FALL_PARTICLES) && entity.getTag(EXTRA_FALL_PARTICLES) && fallDistance > 0.0) {
-            Vec position = Vec.fromPoint(landingPos).apply(Vec.Operator.FLOOR).add(0.5, 1, 0.5);
-            int particleCount = (int) Math.max(0, Math.min(200, 50 * fallDistance));
+            Vec position = landingPos.asVec().apply(Vec.Operator.FLOOR).add(0.5, 1, 0.5);
+            int particleCount = (int) Math.clamp(50 * fallDistance, 0, 200);
 
             packetProvider.sendPacket(
                 entity,
